@@ -3,20 +3,23 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>shadow</groupId>
   <artifactId>compiler</artifactId>
-  <version>0.7.5</version>
+  <version>0.8</version>
   <name>Shadow Compiler</name>
   <url>www.shadow-language.org</url>
   <description>A compiler for the Shadow programming language</description>
+  
+  <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+    </properties>
+
+ 
+  
+  
   <build>
+  
     <plugins>
-      <plugin>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.1</version>
-        <configuration>
-          <source>1.7</source>
-          <target>1.7</target>
-        </configuration>
-      </plugin>
       <plugin>
         <artifactId>maven-clean-plugin</artifactId>
         <version>2.5</version>
@@ -36,11 +39,22 @@
 	            <exclude>Mac.ll</exclude>
 	            <exclude>Main.ll</exclude>
 	            <exclude>NoArguments.ll</exclude>
+	            <exclude>MainWindows.ll</exclude>
+	            <exclude>NoArgumentsWindows.ll</exclude>
 	            <exclude>Unwind32.ll</exclude>
 	            <exclude>Unwind64.ll</exclude>
+	            <exclude>UnwindWindows32.ll</exclude>
+	            <exclude>UnwindWindows64.ll</exclude>
 	            <exclude>Windows.ll</exclude>
 				<exclude>Shared.ll</exclude>
 	          </excludes>
+	          <followSymlinks>false</followSymlinks>
+	        </fileset>
+	        <fileset>
+	          <directory>src/main/java/shadow/jaxb</directory>
+	          <includes>
+	            <include>*.java</include>	            
+	          </includes>
 	          <followSymlinks>false</followSymlinks>
 	        </fileset>	        
 	      </filesets>
@@ -60,32 +74,58 @@
               <transformers>
                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                   <mainClass>shadow.Main</mainClass>
+                  <manifestEntries>
+                            <Multi-Release>true</Multi-Release>
+                  </manifestEntries>
                 </transformer>
+                <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
               </transformers>
             </configuration>
           </execution>
         </executions>
       </plugin>
       <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-compiler-plugin</artifactId>
+          <version>3.8.0</version>
+          <!-->configuration>
+              <release>11</release>
+          </configuration-->
+      </plugin>
+      <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-surefire-plugin</artifactId>
+          <version>2.22.0</version>
+          <configuration>
+              <argLine>--illegal-access=permit</argLine>
+          </configuration>
+      </plugin>
+      <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>jaxb2-maven-plugin</artifactId>
-        <version>1.6</version>
+        <version>2.5.0</version>
          <executions>
             <execution>
                 <id>xjc</id>
                 <goals>
                   <goal>xjc</goal>
                 </goals>
-                <configuration>
-                  <outputDirectory>src/main/java</outputDirectory>
-                  <schemaDirectory>src/main/resources</schemaDirectory>
-                  <schemaFiles>configuration.xsd</schemaFiles>
-                  <packageName>shadow.jaxb</packageName>
-                  <clearOutputDir>false</clearOutputDir>
-                </configuration>
+                
             </execution>
         </executions>
-      </plugin>     
+        <configuration>
+        		<!-->sources>
+                        <source>src/main/resources/dummy.xsd</source>
+                        <source>src/main/resources/configuration.xsd</source>
+                    </sources-->
+         <outputDirectory>src/main/java</outputDirectory>
+         <packageName>shadow.jaxb</packageName>
+         <episodeFileName>episode</episodeFileName>
+         <clearOutputDir>false</clearOutputDir>
+         <noPackageLevelAnnotations>true</noPackageLevelAnnotations>
+       </configuration>
+     
+    </plugin>
       <plugin>
       	<groupId>org.antlr</groupId>
       	<artifactId>antlr4-maven-plugin</artifactId>
@@ -169,37 +209,64 @@
     <dependency>
     	<groupId>org.apache.logging.log4j</groupId>
     	<artifactId>log4j-api</artifactId>
-    	<version>2.8</version>
+    	<version>2.13.3</version>
     </dependency>
     <dependency>
     	<groupId>org.apache.logging.log4j</groupId>
     	<artifactId>log4j-core</artifactId>
-    	<version>2.8</version>
+    	<version>2.13.3</version>
     </dependency>
     <dependency>
     	<groupId>org.junit.jupiter</groupId>
     	<artifactId>junit-jupiter-api</artifactId>
-    	<version>5.5.2</version>
+    	<version>5.6.2</version>
+    	<scope>test</scope>
     </dependency>
     <dependency>
     	<groupId>org.junit.jupiter</groupId>
     	<artifactId>junit-jupiter-engine</artifactId>
-    	<version>5.5.2</version>
+    	<version>5.6.2</version>
+    	<scope>test</scope>
     </dependency>
     <dependency>
     	<groupId>org.junit.platform</groupId>
     	<artifactId>junit-platform-engine</artifactId>
-    	<version>1.5.2</version>
+    	<version>1.6.2</version>
+    	<scope>test</scope>
     </dependency>
     <dependency>
     	<groupId>org.junit.platform</groupId>
     	<artifactId>junit-platform-commons</artifactId>
-    	<version>1.5.2</version>
+    	<version>1.6.2</version>
+    	<scope>test</scope>
     </dependency>
     <dependency>
     	<groupId>org.junit.platform</groupId>
     	<artifactId>junit-platform-runner</artifactId>
-    	<version>1.5.2</version>
+    	<version>1.6.2</version>
+    	<scope>test</scope>
     </dependency>
+    <dependency>
+    	<groupId>org.codehaus.mojo</groupId>
+    	<artifactId>jaxb2-maven-plugin</artifactId>
+    	<version>2.5.0</version>
+    </dependency>
+    <dependency>
+		<groupId>javax.xml.bind</groupId>
+		<artifactId>jaxb-api</artifactId>
+		<version>2.3.0</version>
+	</dependency>        
+  	<dependency>
+      <groupId>org.glassfish.jaxb</groupId>
+      <artifactId>jaxb-runtime</artifactId>
+      <version>2.3.2</version>
+      <scope>runtime</scope>
+ 	</dependency>
+	<dependency>
+      <groupId>com.sun.activation</groupId>
+      <artifactId>jakarta.activation</artifactId>
+      <version>1.2.1</version>
+      <scope>runtime</scope>
+  </dependency>        
   </dependencies>
 </project>
